# calculator-cli

./: .gitignore  .lintstagedrc.json  .node-version  .prettierignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
src/: executor.rs  main.rs  parser.rs
src/operators/: base_operator.rs  diff.rs  mod.rs  sum.rs
