[package]
name = "calculator-cli"
description = "This command-line calculator allows users to perform basic arifmethic operations on numerical input."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
